# NLP-Term-Project-2025

./: .gitignore  README.md
Didier_Tests/: lmsys-kerasnlp-starter.ipynb  main.py  pyproject.toml  testing_tensorflow.py
Didier_Tests2/: lmsys-kerasnlp-starter.ipynb  main.py  pyproject.toml
Didier_Tests3/: main.py  pyproject.toml  test_finetune.ipynb
Didier_Tests4/: pyproject.toml  test_finetune.ipynb
Didier_Tests4/gemma-text-to-sql/runs/Nov29_19-48-20_idea-31/: events.out.tfevents.1764416911.idea-31.2076421.0
Didier_Tests5/: kaggle_test-gemma3-1b-small-finetuned-parallel.ipynb  kaggle_test-gemma3-1b-small-finetuned.ipynb  main.py  pyproject.toml  test_class_comp_3.py  test_class_comp_4.py  test_class_comp_5.py  test_class_comp_6.py  test_class_comp_gemma_1_fix.py  test_class_comp_gemma_2_fix.py  test_class_comp_gemma_3_fix.py  test_classification.ipynb  test_classification_comp.ipynb  test_classification_comp_2.ipynb  test_finetune.ipynb  upload_model.py
src/: gemma2-9b-lora-dual-t4.ipynb  train_gemma_lora.py
