[project]
name = "didier-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "keras>=2.14.0",
    "keras-nlp>=0.18.1",
    "matplotlib>=3.10.7",
    "numpy<2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "tensorflow==2.14.0",
    "tqdm>=4.67.1",
]
