[project]
name = "didier-tests3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.4.0",
    "bitsandbytes==0.45.3",
    "datasets==3.3.2",
    "dotenv>=0.9.9",
    "evaluate==0.4.3",
    "ipykernel>=7.1.0",
    "peft==0.14.0",
    "protobuf>=6.33.1",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.4.0",
    "transformers>=4.51.3",
    "trl==0.21.0",
]
