[project]
name = "didier-tests3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.4.0",
    "bitsandbytes==0.45.3",
    "datasets==3.3.2",
    "dotenv>=0.9.9",
    "evaluate==0.4.3",
    "ipykernel>=7.1.0",
    "peft==0.14.0",
    "protobuf>=6.33.1",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch==2.5.1+cu121",
    "transformers>=4.51.3",
    "trl==0.21.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
